# virtual-library-api

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20260418_d380b637d2cd_initial_books_table.py
app/: config.py  database.py  main.py
app/ai/: client.py  embeddings.py  prompts.py  summary.py
app/api/: deps.py
app/api/routers/: books.py  health.py  search.py
app/core/: exceptions.py  logging.py
app/models/: book.py
app/repositories/: book.py
app/schemas/: book.py  problem.py
app/services/: book.py
app/static/: index.html
docs/: PRD.md
docs/adr/: 001-fastapi-over-django.md  002-uv-package-manager.md  003-fly-io-deployment.md  004-openrouter-unified-llm-gateway.md  005-scalar-over-swagger.md  006-rfc-7807-errors.md  007-bge-m3-for-multilingual-embeddings.md  template.md
docs/diagrams/: architecture.md  request-flow.md
scripts/: seed.py
tests/: conftest.py  test_ai_client.py  test_ai_embeddings.py  test_ai_summary.py  test_book_model.py  test_book_repository.py  test_book_schemas.py  test_book_service.py  test_books_api.py  test_health.py  test_semantic_search.py
